crates/python_parser/src/snapshots/python_parser__lexer__tests__assignment.snap
---
source: crates/python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        Name(
            Name("a_variable"),
        ),
        0..10,
    ),
    (
        Equal,
        11..12,
    ),
    (
        Int(
            99,
        ),
        13..15,
    ),
    (
        Plus,
        16..17,
    ),
    (
        Int(
            2,
        ),
        18..19,
    ),
    (
        Minus,
        19..20,
    ),
    (
        Int(
            0,
        ),
        20..21,
    ),
    (
        Newline,
        21..21,
    ),
]
```
