crates/python_parser/src/snapshots/python_parser__lexer__tests__bom_with_offset_edge.snap
---
source: crates/python_parser/src/lexer.rs
expression: "lex_source_with_offset(source, TextSize::new(11))"
---
## Tokens
```
[
    (
        Name(
            Name("z"),
        ),
        11..12,
    ),
    (
        Newline,
        12..12,
    ),
]
```
