crates/python_parser/src/snapshots/python_parser__lexer__tests__comment_until_mac_eol.snap
---
source: crates/python_parser/src/lexer.rs
expression: comment_until_eol(MAC_EOL)
---
## Tokens
```
[
    (
        Int(
            123,
        ),
        0..3,
    ),
    (
        Comment,
        5..10,
    ),
    (
        Newline,
        10..11,
    ),
    (
        Int(
            456,
        ),
        11..14,
    ),
    (
        Newline,
        14..14,
    ),
]
```
